Fix: Modal text overflow in y direction

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -232,6 +232,7 @@ footer {
     padding: 20px;
     text-align: center;
     position: relative;
+    overflow-y: auto;
 }
 
 /* media queries*/
